[tool.poetry]
name = "arxiv-grapher"
version = "0.1.0"
description = "python package used to visualize academics and find related people"
authors = ["Roy Rinberg <royrinberg@gmail.com>"]
packages = [
   { include = "arxiv_grapher" },
   ]

[tool.poetry.scripts]
arxiv-grapher = "arxiv_grapher.cli:main"


[tool.poetry.dependencies]
python = "^3.7"
arxiv = "^0.5.3"
click = "^7.1.2"
networkx = "^2.4"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
