[tool.poetry]
name = "arxiv-connections"
version = "0.1.1"
description = "python package used to visualize academics and find related people"
authors = ["Roy Rinberg <royrinberg@gmail.com>"]
packages = [
   { include = "arxiv_connections" },
   ]

[tool.poetry.scripts]
arxiv-connector = "arxiv_connections.cli:main"


[tool.poetry.dependencies]
python = "^3.7"
arxiv = "^0.5.3"
click = "^7.1.2"
networkx = "^2.4"
pandas = "^1.1.0"
nb_black = "^1.0.7"
plotly = "^4.9.0"
matplotlib = "^3.3.0"
wheel = "^0.34.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
