[tool.poetry]
name = "arxiv-connections"
version = "0.3.0"
description = "python package used to visualize academics and find related people"
authors = ["Roy Rinberg <royrinberg@gmail.com>"]
packages = [
   { include = "arxiv_connections" },
   ]

[tool.poetry.scripts]
arxiv-connector = "arxiv_connections.cli:main"


[tool.poetry.dependencies]
python = "^3.9,<=3.10"
#arxiv = "^0.5.3"
#click = "^7.1.2"
#networkx = "^2.4"
#pandas = "^1.1.0"
#nb_black = "^1.0.7"
#plotly = "^4.9.0"
#matplotlib = "^3.3.0"
#wheel = "^0.34.2"
arxiv = "^1.4.8"
numpy = "^1.26.0"
wheel = "^0.41.2"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
pandas = "^2.1.1"
networkx = "^3.1"
click = "^8.1.7"
ipykernel = "^6.25.2"
nbformat = "^5.9.2"
scikit-learn = "^1.3.1"

[tool.poetry.dev-dependencies]
#pytest = "^4.6.0"
#yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
